force-app/main/default/objects/Parametro_middleware_Marketing__mdt/Parametro_middleware_Marketing__mdt.object-meta.xml
<CustomObject>
    <label>Parametro middleware Marketing</label>
    <pluralLabel>Parametros middleware Marketing</pluralLabel>
</CustomObject>