force-app/main/default/objects/Parametro_middleware_Marketing__mdt/fields/et_clientId__c.field-meta.xml
<CustomField>
    <fullName>et_clientId__c</fullName>
    <label>et_clientId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>