force-app/main/default/objects/Parametro_middleware_Marketing__mdt/fields/et_clientSecret__c.field-meta.xml
<CustomField>
    <fullName>et_clientSecret__c</fullName>
    <label>et_clientSecret</label>
    <length>50</length>
    <type>Text</type>
</CustomField>