force-app/main/default/objects/Parametro_middleware_Marketing__mdt/fields/et_mid__c.field-meta.xml
<CustomField>
    <fullName>et_mid__c</fullName>
    <label>et_mid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>