force-app/main/default/objects/Parametro_middleware_Marketing__mdt/fields/et_subdomain__c.field-meta.xml
<CustomField>
    <fullName>et_subdomain__c</fullName>
    <label>et_subdomain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>