force-app/main/default/objects/Parametro_middleware_Marketing__mdt/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <label>External-Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>