force-app/main/default/objects/Parametro_middleware_Marketing__mdt/fields/External_key_verification_code__c.field-meta.xml
<CustomField>
    <fullName>External_key_verification_code__c</fullName>
    <label>External key verification code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>