force-app/main/default/objects/Parametro_middleware_Marketing__mdt/fields/External_key_verification_email__c.field-meta.xml
<CustomField>
    <fullName>External_key_verification_email__c</fullName>
    <label>External key verification email</label>
    <length>20</length>
    <type>Text</type>
</CustomField>