force-app/main/default/objects/Parametro_middleware_Marketing__mdt/fields/X_api_key_Vindicia__c.field-meta.xml
<CustomField>
    <fullName>X_api_key_Vindicia__c</fullName>
    <label>X api key Vindicia</label>
    <length>150</length>
    <type>Text</type>
</CustomField>